--- a/BilliardsReport/BilliardsReport.Web/Web.config
+++ b/BilliardsReport/BilliardsReport.Web/Web.config
@@ -9,8 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;AttachDbFilename=|DataDirectory|\aspnet-BilliardsReport.Web-20160514114007.mdf;Initial Catalog=aspnet-BilliardsReport.Web-20160514114007;Integrated Security=True"
-      providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.;AttachDbFilename=|DataDirectory|\Users.mdf;Initial Catalog=Users;Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
