--- a/BilliardsReport/BilliardsReport.Authentification/BilliardsReport.Authentification.csproj
+++ b/BilliardsReport/BilliardsReport.Authentification/BilliardsReport.Authentification.csproj
@@ -87,13 +87,21 @@
   <ItemGroup>
     <Compile Include="App_Start\IdentityConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
-    <Compile Include="Class1.cs" />
+    <Compile Include="Domain\ApplicationDbContext.cs" />
+    <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Providers\ApplicationOAuthProvider.cs" />
+    <Compile Include="Startup.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\BilliardsReport.Constants\BilliardsReport.Constants.csproj">
+      <Project>{d6aef90f-2839-4f53-a855-39caf23d5e29}</Project>
+      <Name>BilliardsReport.Constants</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
